@@ -1,8 +1,8 @@
 #define PI 3.14159265359
 
 //inputs from vertex shader
-varying vec4 vert_pos;
-varying vec4 color;
+in vec4 vert_pos;
+in vec4 color;
 
 //uniform values
 uniform sampler2D texture;
