@@ -5,3 +5,4 @@ Add Voronoi.h and Voronoi.cpp
 Change exception string to from "V-2DEngine" to "V-2DFramework"
 And Lib::Mid for ConvexShape
 Restructured Lib with Decl and Def
+Fixed Varying bugs with all shaders
